@@ -3,8 +3,11 @@ package com.pottda.game.model;
 import com.pottda.game.model.items.ItemSize;
 import com.pottda.game.model.items.SizedItem;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
 /**
  * Class used to cache inventories to speed up instantiating
@@ -55,6 +58,7 @@ public class InventoryBlueprint {
     private final Map<PointAndOrientation, Class<? extends Item>> itemMap;
 
     private final Map<PointAndOrientation, ItemSize> itemSizeMap;
+
     private InventoryBlueprint(XMLInventory inventory) {
         itemMap = new HashMap<PointAndOrientation, Class<? extends Item>>();
         itemSizeMap = new HashMap<PointAndOrientation, ItemSize>();
@@ -63,7 +67,7 @@ public class InventoryBlueprint {
 
         try {
             for (XMLItem i : inventory.items) {
-                if (i instanceof XMLSizedItem){
+                if (i instanceof XMLSizedItem) {
                     addSizedItemClass(ItemClassLoader.getSizedItemClass(i.getClassName()),
                             i.getX(),
                             i.getY(),
@@ -106,24 +110,31 @@ public class InventoryBlueprint {
     private Inventory newInventory() {
         Inventory inventory = new Inventory();
         inventory.setDimensions(width, height);
+        Set<Item> itemSet = new HashSet<Item>();
+
         Item item;
         for (Map.Entry<PointAndOrientation, Class<? extends Item>> entry : itemMap.entrySet()) {
             try {
-                item = entry.getValue().newInstance();
-                if (itemSizeMap.containsKey(entry.getKey())){
+                item = entry.getValue().getDeclaredConstructor().newInstance();
+                if (itemSizeMap.containsKey(entry.getKey())) {
                     ((SizedItem) item).setSize(itemSizeMap.get(entry.getKey()));
                 }
-                item.init();
                 item.setX(entry.getKey().x);
                 item.setY(entry.getKey().y);
                 item.setOrientation(entry.getKey().orientation);
-                inventory.addItem(item);
+                itemSet.add(item);
             } catch (InstantiationException e) {
                 throw new InstantiationError("Could not create instance of: " + entry.getValue().toString());
             } catch (IllegalAccessException e) {
                 throw new Error("Access failure in blueprint", e);
+            } catch (NoSuchMethodException e) {
+                throw new Error("Reflect sorcery failure", e);
+            } catch (InvocationTargetException e) {
+                throw new Error("Reflect sorcery failure", e);
             }
         }
+
+        inventory.addItems(itemSet);
 
         return inventory;
     }
